--- a/src/index.css
+++ b/src/index.css
@@ -16,9 +16,6 @@
   box-sizing: border-box;
 }
 
-html {
-  font-size: 62.5%;
-}
 
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
@@ -34,7 +31,9 @@ body {
 .nav-bar {
   display: flex;
   justify-content: space-around;
+  width: 1500px;
   align-items: center;
+  margin: 0 auto;
   gap: 1rem;
   height: 7.2rem;
   padding: 0 3.2rem;
