--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,7 @@ body {
 
   color: var(--color-text);
   background-color: var(--color-background-900);
-  padding: 2.4rem;
+  padding: 1rem;
 }
 
 /* ******* */
@@ -31,7 +31,6 @@ body {
 .nav-bar {
   display: flex;
   justify-content: space-around;
-  width: 1500px;
   align-items: center;
   margin: 0 auto;
   gap: 1rem;
@@ -91,6 +90,7 @@ body {
 }
 
 .search {
+  flex-wrap: wrap;
   justify-self: center;
   border: none;
   padding: 1.1rem 1.6rem;
@@ -231,8 +231,8 @@ body {
 .summary div {
   display: flex;
   align-items: center;
-  gap: 2.4rem;
-  font-size: 1.6rem;
+  gap: 1rem;
+  font-size: 1rem;
   font-weight: 600;
 }
 
@@ -240,6 +240,7 @@ body {
   display: flex;
   align-items: center;
   gap: 0.8rem;
+  font-size: 1rem;
 }
 
 /* ******* */
@@ -261,7 +262,8 @@ body {
 }
 
 .details img {
-  width: 33%;
+  width: auto;
+  height: fit-content;
 }
 
 .details-overview {
@@ -327,16 +329,16 @@ body {
   position: absolute;
   top: 0.6rem;
   left: 0.6rem;
-  height: 2.5rem;
+  height: 2rem;
   aspect-ratio: 1;
   border-radius: 50%;
   border: none;
   /* background-color: var(--color-text); */
-  background-color: #fff;
+  background-color: rgba(255, 0, 0, 0.656);
   color: var(--color-background-500);
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.8);
   font-family: sans-serif;
-  font-size: 2.4rem;
+  font-size: 1rem;
   font-weight: bold;
   cursor: pointer;
   z-index: 999;
@@ -345,25 +347,340 @@ body {
   justify-content: center;
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 1010px) {
+  body {
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+      Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  
+    color: var(--color-text);
+    background-color: var(--color-background-900);
+    padding: 1;
+  }
+    /* ******* */
+
   .nav-bar {
-    flex-wrap: wrap;
-    height: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    margin: 0 auto;
+    gap: 1rem;
+    height: fit-content;
+    padding: 1rem;
+    background-color: var(--color-primary);
+    border-radius: 0.9rem;
   }
-
-  .num-results {
-    padding-bottom: 1rem;
-  }
-
+  
   .main {
+    margin-top: 2.4rem;
+    height: calc(100vh - 7.2rem - 3 * 2.4rem);
+    display: flex;
     flex-wrap: wrap;
-    height: calc(160vh - 7.2rem - 3 * 0.4rem);
+    gap: 2.4rem;
+    justify-content: center;
   }
-
+  
+  .box {
+    width: 46rem;
+    max-width: 46rem;
+    background-color: var(--color-background-500);
+    border-radius: 0.9rem;
+    position: relative;
+    overflow-y: auto;
+  }
+  
+  .loader {
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 2rem;
+    font-weight: 600;
+    margin: 4.8rem;
+  }
+  
+  .error {
+    text-align: center;
+    font-size: 2rem;
+    padding: 4.8rem;
+  }
+  
+  /* ******* */
+  
+  .logo {
+    display: flex;
+    align-items: center;
+    gap: 0.8rem;
+  }
+  
+  .logo span {
+    font-size: 1.5rem;
+  }
+  
+  .logo h1 {
+    font-size: 1.2em;
+    font-weight: 600;
+    color: #fff;
+  }
+  
+  .search {
+    width: 100%;
+    justify-self: center;
+    border: none;
+    font-size: 1.2rem;
+    border-radius: 0.7rem;
+    transition: all 0.3s;
+    color: var(--color-text);
+  
+    /* background-color: var(--color-background-900); */
+    background-color: var(--color-primary-light);
+  }
+  
+  .search::placeholder {
+    color: var(--color-text-dark);
+    font-size: 1rem;
+  }
+  
+  .search:focus {
+    outline: none;
+    box-shadow: 0 2.4rem 2.4rem rgba(0, 0, 0, 0.1);
+    transform: translateY(-2px);
+  }
+  
+  .num-results {
+    flex-shrink: 0;
+    justify-self: end;
+    font-size: 1rem;
+  }
+  
+  .btn-toggle {
+    position: absolute;
+    top: 0.8rem;
+    right: 0.8rem;
+    height: 2.4rem;
+    aspect-ratio: 1;
+    border-radius: 50%;
+    border: none;
+    background-color: var(--color-background-900);
+    color: var(--color-text);
+    font-size: 1.4rem;
+    font-weight: bold;
+    cursor: pointer;
+    z-index: 999;
+  }
+  
+  .list {
+    list-style: none;
+    padding: 0.8rem 0;
+  }
+  
+  .list-watched {
+    height: calc(100% - 9rem);
+  }
+  
+  .list li {
+    position: relative;
+    display: grid;
+    grid-template-columns: 4rem 1fr;
+    grid-template-rows: auto auto;
+    column-gap: 2.4rem;
+    font-size: 1.6rem;
+    align-items: center;
+  
+    padding: 1.6rem 3.2rem;
+    border-bottom: 1px solid var(--color-background-100);
+  }
+  
+  .list.list-movies li {
+    cursor: pointer;
+    transition: all 0.3s;
+  }
+  
+  .list.list-movies li:hover {
+    background-color: var(--color-background-100);
+  }
+  
+  .list img {
+    width: 100%;
+    grid-row: 1 / -1;
+  }
+  
+  .list svg {
+    grid-row: 1 / -1;
+    padding-right: 10px;
+  }
+  
+  .list h3 {
+    font-size: medium;
+  }
+  
+  .list div {
+    display: flex;
+    align-items: center;
+    gap: 2.4rem;
+  }
+  
+  .list p {
+    display: flex;
+    align-items: center;
+    gap: 0.8rem;
+  }
+  
+  .btn-delete {
+    position: absolute;
+    right: 2.4rem;
+    top: 2rem;
+    height: 1.8rem;
+    aspect-ratio: 1;
+    border-radius: 50%;
+    border: none;
+    background-color: var(--color-red);
+    color: var(--color-background-900);
+    font-size: 0.9rem;
+    font-weight: bold;
+    cursor: pointer;
+    transition: all 0.3s;
+  }
+  
+  .btn-delete:hover {
+    background-color: var(--color-red-dark);
+  }
+  
+  /* ******* */
+  
+  .summary {
+    padding: 2.2rem 3.2rem 1.8rem 3.2rem;
+    border-radius: 0.9rem;
+    background-color: var(--color-background-100);
+    box-shadow: 0 1.2rem 2.4rem rgba(0, 0, 0, 0.2);
+  }
+  
+  .summary h2 {
+    text-transform: uppercase;
+    font-size: 1rem;
+    margin-bottom: 1.2rem;
+  }
+  
+  .summary div {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    font-size: 1.6rem;
+    font-weight: 600;
+  }
+  
+  .summary p {
+    display: flex;
+    align-items: center;
+    gap: 0.8rem;
+  }
+  
+  /* ******* */
+  
+  .details {
+    line-height: 1.4;
+    font-size: 1rem;
+  }
+  
+  .details header {
+    display: flex;
+    flex-direction: column;
+    justify-self: center;
+    align-items: center;
+  }
+  
+  .details section {
+    padding: 4rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1.6rem;
+  }
+  
   .details img {
-    width: 33%;
-    height: min-content;
-    margin: auto 0;
+    width: 50%;
+    height: fit-content;
+    padding: 1rem;
+  }
+  
+  .details-overview {
+    width: 100%;
+    padding: 2.4rem 3rem;
+    background-color: var(--color-background-100);
+    display: flex;
+    flex-direction: column;
+    gap: 1.4rem;
+    font-size: 1rem;
+
+  }
+  
+  .details-overview h2 {
+    font-size: 1.2rem;
+    margin-bottom: 0.4rem;
+    line-height: 1.1;
+  }
+  
+  .details-overview p {
+    display: flex;
+    align-items: center;
+    gap: 0.8rem;
+  }
+  
+  
+  .rating {
+    background-color: var(--color-background-100);
+    border-radius: 0.9rem;
+    padding: 2rem 2.4rem;
+    margin-bottom: 0.8rem;
+    font-weight: 600;
+    display: flex;
+    flex-direction: column;
+    gap: 2.4rem;
+  }
+  
+  .btn-add {
+    background-color: var(--color-primary);
+    color: var(--color-text);
+    border: none;
+    border-radius: 10rem;
+    font-size: 1.4rem;
+    padding: 1rem;
+    font-weight: bold;
+    cursor: pointer;
+    transition: all 0.3s;
+  }
+  
+  .btn-add:hover {
+    background-color: var(--color-primary-light);
+  }
+  
+  .seconds {
+    background-color: var(--color-background-100);
+    width: 8rem;
+    border-radius: 10rem;
+    font-weight: 600;
+    text-align: center;
+    padding: 0.4rem;
+    margin-top: 2.4rem;
+  }
+  
+  .btn-back {
+    position: absolute;
+    top: 0.6rem;
+    left: 0.6rem;
+    height: 2rem;
+    aspect-ratio: 1;
+    border-radius: 50%;
+    border: none;
+    /* background-color: var(--color-text); */
+    background-color: rgba(255, 0, 0, 0.656);
+    color: var(--color-background-500);
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.8);
+    font-family: sans-serif;
+    font-size: 1rem;
+    font-weight: bold;
+    cursor: pointer;
+    z-index: 999;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 
 }
